add tests for the run task